- fixed @retry in python 3
- @silent, @ignore() and decorators created with @decorator will now work
  with method_descriptors and other non-wrappable callables.
Backward incompatible changes:
- function made from dict will now use __getitem__ instead of get.
  Means possible KeyErrors for dicts and factory function calls for defaultdict.
  Use `a_dict.get` instead of just `a_dict` for old behaviour.

0.10.1
- optimized @decorator

0.10
- added is_tuple()
- raiser() can now be called without arguments, defaults to Exception
- support del @cached_property
- optimized and cleaned up @cached_property
- optimized i?split(), split_at() and split_by()
- optimized @memoize
- optimized zipdict()
Backward incompatible changes:
- split(), split_at() and split_by() now return a tuple of two lists instead of list of them
- @cached_property no longer uses _name to store cached value
- partial() is now an alias to functools.partial, use func_partial() for old behaviour

0.9
- added experimental python 3 support
- added python 2.6 support
- added autocurry()
- published idistinct(), isplit(), isplit_at(), isplit_by()
- some optimizations

0.8
- added raiser()
- added idistinct()
- added key argument to i?distinct()
- added key argument to is_distinct()
- added group_by_keys()
Backward incompatible changes:
- walk_values() now updates defaultdict item factory to composition of mapper and old one
- izip_dicts() now packs values in tuple separate from key
- @decorator raises AttributeError not NameError when non-existent argument is accessed by name

0.7
- added i?flatten()
- added pairwise()
- added nth()
- added is_seqcont()
- greatly optimized @decorator
- added @log_durations and @print_durations
- @logs_calls and @print_calls now provide call signature on return
- @logs_calls and @print_calls now log errors, optional for @log_calls
- better call signature stringification for @(log|print)_(calls|errors)
- fixed i?partition() and i?chunks() with xrange()