@@ -1,6 +1,7 @@
-- fixed @retry in python 3
 - @silent, @ignore() and decorators created with @decorator will now work
   with method_descriptors and other non-wrappable callables.
+- chained decorators now have access to arguments by name
+- fixed @retry in python 3
 Backward incompatible changes:
 - function made from dict will now use __getitem__ instead of get.
   Means possible KeyErrors for dicts and factory function calls for defaultdict.
